# wsl-ui-keepalive

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  README.md  SECURITY.md  TRADEMARK  greptile.json  index.html  package-lock.json  package.json  release-please-config.json  tsconfig.e2e.json  tsconfig.json  vite.config.ts  wdio.conf.ts
docs/: FEATURES.md  PRIVACY.md  TROUBLESHOOTING.md  USER-GUIDE.md
scripts/: build-msix.ps1  create-msix.ps1  generate-icons.cjs  msix-template.xml  sync-i18n.cjs  validate-i18n.cjs  validate-msix.ps1  verify-i18n.cjs  wsl2-arch-desktop-xrdp.sh  wsl2-fedora-desktop-xrdp.sh  wsl2-kali-desktop-winkex.sh  wsl2-opensuse-desktop-xrdp.sh  wsl2-ubuntu-desktop-xrdp.sh
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: default-custom-actions.json  default-settings.json
src-tauri/src/: actions.rs  commands.rs  constants.rs  default_catalog.json  distro_catalog.rs  download.rs  error.rs  hyperv.rs  keepalive.rs  main.rs  metadata.rs  settings.rs  temp_file_guard.rs  utils.rs  validation.rs
src-tauri/src/oci/: image.rs  mod.rs  registry.rs  types.rs
src-tauri/src/wsl/: core.rs  distro_sources.rs  import_export.rs  info.rs  install.rs  mod.rs  resources.rs  service.rs  terminal.rs  types.rs
src-tauri/src/wsl/executor/: mod.rs
src-tauri/src/wsl/executor/resource/: mock.rs  mod.rs  real.rs
src-tauri/src/wsl/executor/terminal/: mock.rs  mod.rs  real.rs
src-tauri/src/wsl/executor/wsl_command/: mock.rs  mod.rs  real.rs
(+322 files in other folders)
