[package]
name = "wsl-ui"
version = "1.0.1"
description = "A lightweight desktop application to monitor and manage VMs and WSL distributions"
authors = ["youjunjer"]
license = "BUSL-1.1"
repository = "https://github.com/youjunjer/wsl-ui-keepalive"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["tray-icon"] }
tauri-plugin-shell = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-single-instance = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
lazy_static = "1.5"
chrono = "0.4"
regex = "1"
shell-escape = "0.1"
configparser = "3"
reqwest = { version = "0.12", features = ["stream", "blocking", "json"] }
tokio = { version = "1", features = ["fs"] }
futures-util = "0.3"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"

# Local crates
wsl-core = { path = "../crates/wsl-core" }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
wiremock = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
